tests/resource/valid/definition/tuple_non_lit_modify_mut.mamba
class MyClass
    def my_field: Int := 10

def f() -> (MyClass, Int) =>
    (MyClass(), 10)

def (a, b) := f()
a.my_field := 20
