tests/resource/invalid/type/definition/tuple_modify_mut_entire.mamba
class MyClass
    def my_field: Int := 10


def fin c := (MyClass(), 10)
c := (MyClass(), 30)
